<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="8dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:outlineSpotShadowColor="@color/white">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_background"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imageViewThumbnail"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:paddingBottom="8dp"
                android:layout_margin="4dp"
                android:scaleType="fitCenter"
                android:src="@drawable/hospital_icon"
                android:background="@drawable/thumbnail_background"/>

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nama_rumah_sakit"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                style="@style/TextAppearance.Material3.TitleMedium" />

            <TextView
                android:id="@+id/textViewAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/alamat"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                style="@style/TextAppearance.Material3.LabelMedium" />

            <TextView
                android:id="@+id/textViewRegion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/region"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                style="@style/TextAppearance.Material3.LabelMedium" />

            <TextView
                android:id="@+id/textViewPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/phone"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                style="@style/TextAppearance.Material3.LabelMedium"/>

            <TextView
                android:id="@+id/textViewProvince"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/province"
                android:textColor="@color/design_default_color_primary"
                android:textColorHint="@color/design_default_color_primary"
                style="@style/TextAppearance.Material3.LabelLarge"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>